--- a/index.html
+++ b/index.html
@@ -41,7 +41,102 @@
 </head>
 
 <body class="font-poppins">
-    <header></header>
+    <!-- header section starts -->
+    <header class="bg-gradient-to-b from-gray-100 to-primary">
+        <div class="md:container md:mx-auto mx-4 pt-8 md:pt-10">
+            <!-- navbar starts -->
+            <div class="navbar">
+                <div class="navbar-start gap-1">
+                    <button class="btn btn-circle btn-sm bg-secondary">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 -rotate-45" viewBox="0 0 512 512">
+                            <path
+                                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                        </svg>
+                    </button>
+                    <a class=" font-bold text-2xl md:text-3xl">Rinterio</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1">
+                        <li class="font-bold"><a>Home</a></li>
+                        <li class="hover:font-bold "><a>Services</a></li>
+                        <li class="hover:font-bold"><a>Portfolio</a></li>
+                        <li class="hover:font-bold"><a>Blogs</a></li>
+                        <li class="hover:font-bold"><a>Contucts Us</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end flex gap-2 w-full">
+                    <div class="hidden md:flex md:gap-2">
+                        <button class="btn btn-circle bg-primary text-paragraph">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                            </svg>
+                        </button>
+                        <button class="btn btn-circle bg-primary text-paragraph">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                            </svg>
+                        </button>
+                        <button class="btn rounded-full bg-secondary font-bold text-2xl">
+                            Book Consult
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-8 -rotate-45 bg-head rounded-full p-2"
+                                viewBox="0 0 512 512">
+                                <path fill="white"
+                                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="dropdown lg:hidden dropdown-bottom dropdown-end">
+                        <div tabindex="0" role="button" class="btn btn-circle bg-primary">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                class="inline-block h-5 w-5 stroke-current">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h16M4 18h16"></path>
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                            <li><a>Home</a></li>
+                            <li><a>Services</a></li>
+                            <li><a>Portfolio</a></li>
+                            <li><a>Blogs</a></li>
+                            <li><a>Contucts Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- banner sarts -->
+            <div class="hero mt-8 md:mt-10 mb-10 md:mb-16 lg:mb-24">
+                <div class="p-0 text-center">
+                    <div class="max-w-full space-y-6">
+                        <!-- banner image -->
+                        <img src="./assets/banner.png" class="w-4/5 md:w-1/2 mx-auto">
+                        <!-- banner texts -->
+                        <h1 class="md:w-11/12 mx-auto text-3xl md:text-4xl lg:text-6xl font-bold">A barn house of this
+                            design has a striking appearance</h1>
+                        <p class="md:w-3/4 mx-auto">
+                            A barn house of this design has a striking appearance, combining rustic elements with sleek,
+                            modern lines. Its expansive windows and exposed beams create a bold yet inviting atmosphere,
+                            blending tradition with contemporary style.
+                        </p>
+                        <button class="btn w-full md:w-auto rounded-full bg-third font-bold text-2xl">
+                            View Details
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-8 -rotate-45 bg-secondary rounded-full p-2"
+                                viewBox="0 0 512 512">
+                                <path fill="black"
+                                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- header section ends -->        
+
     <main></main>
     <footer></footer>
 </body>
