--- a/index.html
+++ b/index.html
@@ -137,7 +137,148 @@
     </header>
     <!-- header section ends -->        
 
-    <main></main>
+    <!-- main section starts -->
+    <main class="bg-gray-200">
+        <!-- we design section starts -->
+        <section class="md:container md:mx-auto mx-4 py-8 md:py-16 lg:py-24">
+            <!-- design container -->
+            <div class="flex flex-col lg:flex-row gap-6 lg:gap-8 lg:h-[545px]">
+                <!-- design texts -->
+                <div class="lg:flex-1 lg:flex lg:flex-col lg:justify-between">
+                    <div class="flex justify-center mb-4 lg:mb-0 lg:justify-start relative">
+                        <a class="btn rounded-full bg-primary font-bold ">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewBox="0 0 512 512">
+                                <path
+                                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                            </svg>
+                            About Us
+                        </a>
+                        <img src="./assets/Vector.png" class="absolute -top-16 -left-12 hidden lg:block">
+                    </div>
+                    <div class="mb-4 lg:mb-0 space-y-5">
+                        <h3 class="font-bold text-2xl md:text-3xl lg:text-4xl text-center lg:text-start">We design
+                            thoughtful, liveable spaces</h3>
+                        <p class="text-center lg:text-start font-medium md:w-4/5 lg:w-full mx-auto">
+                            We design thoughtful, livable spaces that combine functionality and beauty, ensuring every
+                            detail enhances comfort and style in your home.
+                        </p>
+                    </div>
+                    <div class="flex flex-col md:flex-row lg:flex-col gap-4">
+                        <div class="card card-side items-start lg:items-center bg-base-100 gap-4 p-5 shadow-xl">
+                            <figure>
+                                <img src="./assets/commercial.png" />
+                            </figure>
+                            <div class="card-body p-0">
+                                <h2 class="card-title">Commercial</h2>
+                                <p>
+                                    We create innovative commercial spaces that maximize efficiency and inspire
+                                    productivity.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card card-side items-start lg:items-center bg-base-100 gap-4 p-5 shadow-xl">
+                            <figure>
+                                <img src="./assets/residential.png" />
+                            </figure>
+                            <div class="card-body p-0">
+                                <h2 class="card-title">Residential</h2>
+                                <p>
+                                    We craft residential spaces that blend comfort and style to your unique lifestyle.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- design image -->
+                <div class="lg:flex-1">
+                    <img src="./assets/Rectangle.png" class="w-full h-full">
+                </div>
+            </div>
+        </section>
+        <!-- we design section ends -->
+
+        <!-- stats section starts -->
+        <section class="md:container md:mx-auto mx-4">
+            <div
+                class="stats p-6 lg:p-8 w-full md:grid-cols-2 lg:grid-cols-4 lg:gap-6 stats-vertical lg:stats-horizontal shadow">
+                <div class="stat text-paragraph flex flex-col border-none items-center justify-center space-y-1">
+                    <div>
+                        <svg class="w-10 h-10" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M13.33 22.5L26.66 22.5M13.33 14.16L20 14.16" stroke="#737373"
+                                stroke-opacity="1.000000" stroke-width="2.500000" stroke-linejoin="round"
+                                stroke-linecap="round" />
+                            <path
+                                d="M10.16 31.66C7.99 31.45 6.37 30.8 5.28 29.71C3.33 27.76 3.33 24.61 3.33 18.33L3.33 17.5C3.33 11.21 3.33 8.07 5.28 6.11C7.23 4.16 10.38 4.16 16.66 4.16L23.33 4.16C29.61 4.16 32.76 4.16 34.71 6.11C36.66 8.07 36.66 11.21 36.66 17.5L36.66 18.33C36.66 24.61 36.66 27.76 34.71 29.71C32.76 31.66 29.61 31.66 23.33 31.66C22.39 31.68 21.65 31.75 20.92 31.92C18.92 32.38 17.07 33.4 15.24 34.29C12.64 35.56 11.34 36.2 10.52 35.6C8.96 34.44 10.49 30.83 10.83 29.16"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="2.500000"
+                                stroke-linecap="round" />
+                        </svg>
+                    </div>
+                    <div class="stat-value">235+</div>
+                    <div class="stat-title font-medium">Happy Client Review</div>
+                </div>
+                <div class="stat text-paragraph flex flex-col border-none items-center justify-center space-y-1">
+                    <div>
+                        <svg class="w-10 h-10" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M34.99 15.21C34.99 13.32 34.99 12.37 34.53 11.58C34.07 10.78 33.25 10.32 31.61 9.39L23.24 4.67C21.65 3.78 20.86 3.33 20 3.33C19.13 3.33 18.34 3.78 16.76 4.67L8.38 9.39C6.74 10.32 5.92 10.78 5.46 11.58C5 12.37 5 13.32 5 15.21L5 23.13C5 29.51 5 32.7 6.95 34.68C8.9 36.66 12.04 36.66 18.33 36.66L21.66 36.66C27.95 36.66 31.09 36.66 33.04 34.68C35 32.7 35 29.51 35 23.13L34.99 15.21Z"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000" />
+                            <path
+                                d="M16.66 21.66L13.33 21.66M26.66 21.66L23.33 21.66M16.66 15L13.33 15M16.66 28.33L13.33 28.33M26.66 15L23.33 15M26.66 28.33L23.33 28.33"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000"
+                                stroke-linecap="round" />
+                        </svg>
+                    </div>
+                    <div class="stat-value">50+</div>
+                    <div class="stat-title font-medium">Work Departments</div>
+                </div>
+                <div class="stat text-paragraph flex flex-col border-none items-center justify-center space-y-1">
+                    <div>
+                        <svg class="w-10 h-10" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M34.62 30C35.87 30 36.86 29.21 37.75 28.11C39.58 25.86 36.58 24.06 35.44 23.18C34.28 22.29 32.98 21.78 31.66 21.66M30 18.33C32.3 18.33 34.16 16.46 34.16 14.16C34.16 11.86 32.3 10 30 10"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000"
+                                stroke-linecap="round" />
+                            <path
+                                d="M5.37 30C4.12 30 3.13 29.21 2.24 28.11C0.41 25.86 3.41 24.06 4.55 23.18C5.71 22.29 7.01 21.78 8.33 21.66M9.16 18.33C6.86 18.33 5 16.46 5 14.16C5 11.86 6.86 10 9.16 10"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000"
+                                stroke-linecap="round" />
+                            <path
+                                d="M10.02 31.07C11.35 32.39 12.83 33.33 14.69 33.33L25.3 33.33C27.16 33.33 28.64 32.39 29.97 31.07C32.69 28.38 28.23 26.23 26.52 25.18C22.53 22.71 17.46 22.71 13.47 25.18C11.77 26.23 7.3 28.38 10.02 31.07Z"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000"
+                                stroke-linejoin="round" />
+                            <path
+                                d="M20 18.33C16.77 18.33 14.16 15.72 14.16 12.49C14.16 9.27 16.77 6.66 20 6.66C23.22 6.66 25.83 9.27 25.83 12.49C25.83 15.72 23.22 18.33 20 18.33Z"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000" />
+                        </svg>
+
+                    </div>
+                    <div class="stat-value">30k+</div>
+                    <div class="stat-title  font-medium">Our Happy Client</div>
+                </div>
+                <div class="stat text-paragraph flex flex-col border-none items-center justify-center space-y-1">
+                    <div>
+                        <svg class="w-10 h-10" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M31.02 33.33L31.84 33.33C33.76 33.33 35.28 32.46 36.65 31.23C40.13 28.13 31.95 25 29.16 25M25.83 8.44C26.21 8.37 26.6 8.33 27 8.33C30.04 8.33 32.5 10.57 32.5 13.33C32.5 16.09 30.04 18.33 27 18.33C26.6 18.33 26.21 18.29 25.83 18.21"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000"
+                                stroke-linecap="round" />
+                            <path
+                                d="M3.48 32.74C5.02 34.06 6.72 35 8.87 35L21.12 35C23.27 35 24.97 34.06 26.51 32.74C29.64 30.05 24.49 27.9 22.53 26.85C17.92 24.38 12.07 24.38 7.46 26.85C5.5 27.9 0.35 30.05 3.48 32.74Z"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000" />
+                            <path
+                                d="M14.99 19.16C11.31 19.16 8.33 16.18 8.33 12.5C8.33 8.81 11.31 5.83 14.99 5.83C18.68 5.83 21.66 8.81 21.66 12.5C21.66 16.18 18.68 19.16 14.99 19.16Z"
+                                stroke="#737373" stroke-opacity="1.000000" stroke-width="1.500000" />
+                        </svg>
+
+                    </div>
+                    <div class="stat-value ">307+</div>
+                    <div class="stat-title font-medium">Staff Members</div>
+                </div>
+            </div>
+        </section>
+        <!-- stats section ends -->
+    </main>
+    <!-- main section ends -->
     <footer></footer>
 </body>
 
