--- a/index.html
+++ b/index.html
@@ -277,6 +277,183 @@
             </div>
         </section>
         <!-- stats section ends -->
+
+        <!-- work process section starts -->
+        <section class="md:container md:mx-auto mx-4 mt-8 md:mt-16 lg:mt-24">
+            <!-- button -->
+            <div class="flex justify-center mb-4">
+                <a class="btn rounded-full bg-primary font-bold ">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewBox="0 0 512 512">
+                        <path
+                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                    </svg>
+                    How we works
+                </a>
+            </div>
+            <!-- texts -->
+            <div class="mb-6 lg:mb-8 space-y-6">
+                <h3 class="font-bold text-2xl md:text-3xl lg:text-5xl text-center text-head">Our Works Process</h3>
+                <p class="text-center font-medium md:w-4/5 lg:w-3/5 mx-auto text-paragraph">
+                    Our work process involves collaboration, clear communication, and attention to detail, ensuring each
+                    project is delivered on time and exceeds expectations.
+                </p>
+            </div>
+            <!-- cards -->
+            <div class="grid gap-4 md:gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                <!-- card-1 -->
+                <div class="card bg-[#E7C1D3] items-start p-6 shadow-xl">
+                    <figure>
+                        <img src="./assets/concept.png" />
+                    </figure>
+                    <div class="card-body mt-3 p-0">
+                        <h2 class="card-title text-xl font-bold">Concept</h2>
+                        <p class="font-medium text-paragraph">
+                            Our concept focuses on merging creativity and practicality to enhance every design.
+                        </p>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="card bg-[#EFDA6E] items-start p-6 shadow-xl">
+                    <figure>
+                        <img src="./assets/flow-chart.png" />
+                    </figure>
+                    <div class="card-body mt-3 p-0">
+                        <h2 class="card-title text-xl font-bold">Design Process</h2>
+                        <p class="font-medium text-paragraph">
+                            Our design process blends creativity and collaboration to bring your vision to life
+                        </p>
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class="card bg-[#A4DAC3] items-start p-6 shadow-xl">
+                    <figure>
+                        <img src="./assets/vision.png" />
+                    </figure>
+                    <div class="card-body mt-3 p-0">
+                        <h2 class="card-title text-xl font-bold">Supervision</h2>
+                        <p class="font-medium text-paragraph">
+                            Our supervision ensures every detail is meticulously managed for a flawless project outcome.
+                        </p>
+                    </div>
+                </div>
+                <!-- card-4 -->
+                <div class="card bg-[#77AAEA] items-start p-6 shadow-xl">
+                    <figure>
+                        <img src="./assets/budget-planning.png" />
+                    </figure>
+                    <div class="card-body mt-3 p-0">
+                        <h2 class="card-title text-xl font-bold">Budget Planningt</h2>
+                        <p class="font-medium text-paragraph">
+                            Our budget planning aligns costs with your goals, ensuring projects stay within financial
+                            limits.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- works process section ends -->
+
+        <!-- portfolio section starts -->
+        <section class="md:container md:mx-auto mx-4 mt-8 md:mt-16 lg:mt-24 lg:py-24 lg:bg-primary">
+            <!-- button -->
+            <div class="flex justify-center mb-4">
+                <a class="btn rounded-full bg-third font-bold ">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewBox="0 0 512 512">
+                        <path
+                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                    </svg>
+                    Explore our Latest works
+                </a>
+            </div>
+            <!-- texts -->
+            <div class="mb-4 md:mb-6 lg:mb-8 space-y-6">
+                <h3 class="font-bold text-2xl md:text-3xl lg:text-5xl text-center text-head">Our Latest Portfolio</h3>
+                <p class="text-center font-medium md:w-4/5 lg:w-3/5 mx-auto text-paragraph">
+                    Our latest portfolio showcases diverse projects, highlighting our expertise in creating innovative,
+                    functional, and aesthetically pleasing spaces. Explore our work.
+                </p>
+            </div>
+            <!-- portfolio grid-1 -->
+            <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
+                <!-- card-1 -->
+                <div class="card gap-6 border md:card-side bg-primary shadow-xl p-6 md:col-span-2">
+                    <figure class="lg:border-2 border-dashed h-48">
+                        <img src="./assets/img1.png" class="w-full h-full rounded-2xl">
+                    </figure>
+                    <div class="card-body md:w-3/5 p-0">
+                        <h2 class="card-title text-head font-bold">Commercial</h2>
+                        <p class="md:flex md:items-center font-medium text-paragraph">
+                            Our commercial designs focus on creating dynamic spaces that enhance productivity, reflect
+                            your brand identity, and provide a seamless experience for both clients and employees.
+                        </p>
+                        <div class="card-actions">
+                            <a href="#" class=" font-bold text-lg bg-primary">
+                                Read More
+                                <button class="btn btn-circle btn-sm bg-secondary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 "
+                                        viewBox="0 0 512 512">
+                                        <path
+                                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                                    </svg>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="h-[247px] border rounded-2xl bg-primary shadow-xl p-6">
+                    <figure class="w-full h-48 lg:border-2 border-dashed">
+                        <img src="./assets/img2.png" class="w-full h-full">
+                    </figure>
+                </div>
+                <!-- card-3 -->
+                <div class="h-[247px] border rounded-2xl bg-primary shadow-xl p-6 lg:hidden">
+                    <figure class="w-full h-48">
+                        <img src="./assets/img5.png" class="w-full h-full">
+                    </figure>
+                </div>
+            </div>
+            <!-- portfolio grid-2 -->
+            <div class="grid gap-6 mt-6 md:grid-cols-2 lg:grid-cols-4">
+                <!-- card-4 -->
+                <div class="card border gap-6 md:card-side bg-base-100 shadow-xl p-6 md:col-span-2 lg:order-2">
+                    <figure class="h-48 lg:border-2 border-dashed">
+                        <img src="./assets/img4.png" class="w-full h-full rounded-2xl">
+                    </figure>
+                    <div class="card-body md:w-3/5 p-0">
+                        <h2 class="card-title font-bold text-head">Commercial</h2>
+                        <p class="md:flex md:items-center font-medium text-paragraph">
+                            We create innovative commercial spaces that maximize efficiency and inspire productivity.
+                        </p>
+                        <div class="card-actions">
+                            <a href="#" class=" font-bold text-lg bg-primary">
+                                Read More
+                                <button class="btn btn-circle btn-sm bg-secondary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 "
+                                        viewBox="0 0 512 512">
+                                        <path
+                                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                                    </svg>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-5 -->
+                <div class="h-[244px] border rounded-2xl bg-primary shadow-xl p-6 lg:order-1">
+                    <figure class="w-full h-48 lg:border-2 border-dashed">
+                        <img src="./assets/img3.png" class="w-full h-full">
+                    </figure>
+                </div>
+                <!-- card-6 -->
+                <div class="h-[244px] border rounded-2xl bg-primary shadow-xl p-6 lg:order-3">
+                    <figure class="w-full h-48 lg:border-2 border-dashed">
+                        <img src="./assets/img5.png" class="w-full h-full">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <!-- portfolio section ends -->        
     </main>
     <!-- main section ends -->
     <footer></footer>
