added news-article and unique section

--- a/index.html
+++ b/index.html
@@ -453,7 +453,261 @@
                 </div>
             </div>
         </section>
-        <!-- portfolio section ends -->        
+        <!-- portfolio section ends -->
+         
+        <!-- news and article section starts -->
+        <section class="md:container md:mx-auto mx-4 mt-8 md:mt-16 lg:mt-24">
+            <!-- button -->
+            <div class="flex justify-center mb-4">
+                <a class="btn rounded-full bg-primary font-bold ">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewBox="0 0 512 512">
+                        <path
+                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                    </svg>
+                    Rinterio News
+                </a>
+            </div>
+            <!-- texts -->
+            <div class="mb-6 lg:mb-8 space-y-6">
+                <h3 class="font-bold text-2xl md:text-3xl lg:text-5xl text-center text-head">Read Our Articles and News
+                </h3>
+                <p class="text-center font-medium md:w-4/5 lg:w-3/5 mx-auto text-paragraph">
+                    Read our articles and news to stay updated on the latest trends, industry insights, and our most
+                    recent project highlights with more details.
+                </p>
+            </div>
+            <!-- news cards -->
+            <div class="grid gap-6 grid-cols-1 lg:grid-cols-3">
+                <!-- car-1 -->
+                <div class="card md:card-side md:gap-4 lg:gap-0 lg:flex-col bg-primary p-6 shadow-xl">
+                    <figure class="lg:border-2 border-dashed p-0">
+                        <img class="w-full h-full rounded-2xl" src="./assets/article1.png" />
+                    </figure>
+                    <div class="card-body mt-3 p-0">
+                        <div class="flex gap-4 font-semibold text-[#737373]">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid fa-calendar-days text-lg"></i>
+                                <p class="text-sm">July14, 2024</p>
+                            </div>
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-circle-user text-lg"></i>
+                                <p class="text-sm">By Admin</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title text-xl font-bold text-paragraph">How to choose the furniture right of
+                            your home.</h2>
+                        <p class="font-medium text-[#737373]">
+                            Choose the right furniture by balancing style, functionality, and space in your home
+                        </p>
+                        <div class="card-actions">
+                            <a class=" font-bold text-lg bg-primary text-head">
+                                Read More
+                                <button class="btn btn-circle btn-sm bg-secondary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 "
+                                        viewBox="0 0 512 512">
+                                        <path
+                                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                                    </svg>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="card md:card-side md:gap-4 lg:gap-0 lg:flex-col bg-primary p-6 shadow-xl">
+                    <figure class="lg:border-2 border-dashed p-0">
+                        <img class="w-full h-full rounded-2xl" src="./assets/article2.png" />
+                    </figure>
+                    <div class="card-body mt-3 p-0">
+                        <div class="flex gap-4 font-semibold text-[#737373]">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid fa-calendar-days text-lg"></i>
+                                <p class="text-sm">July14, 2024</p>
+                            </div>
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-circle-user text-lg"></i>
+                                <p class="text-sm">By Admin</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title text-xl font-bold text-paragraph">How to choose the furniture right of
+                            your home.</h2>
+                        <p class="font-medium text-[#737373]">
+                            Choose the right furniture by balancing style, functionality, and space in your home
+                        </p>
+                        <div class="card-actions">
+                            <a class=" font-bold text-lg bg-primary text-head">
+                                Read More
+                                <button class="btn btn-circle btn-sm bg-secondary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 "
+                                        viewBox="0 0 512 512">
+                                        <path
+                                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                                    </svg>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class="card md:card-side md:gap-4 lg:gap-0 lg:flex-col bg-primary p-6 shadow-xl">
+                    <figure class="lg:border-2 border-dashed p-0">
+                        <img class="w-full h-full rounded-2xl" src="./assets/article3.png" />
+                    </figure>
+                    <div class="card-body mt-3 p-0">
+                        <div class="flex gap-4 font-semibold text-[#737373]">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid fa-calendar-days text-lg"></i>
+                                <p class="text-sm">July14, 2024</p>
+                            </div>
+                            <div class="flex items-center gap-2">
+                                <i class="fa-regular fa-circle-user text-lg"></i>
+                                <p class="text-sm">By Admin</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title text-xl font-bold text-paragraph">How to choose the furniture right of
+                            your home.</h2>
+                        <p class="font-medium text-[#737373]">
+                            Choose the right furniture by balancing style, functionality, and space in your home
+                        </p>
+                        <div class="card-actions">
+                            <a class=" font-bold text-lg bg-primary">
+                                Read More
+                                <button class="btn btn-circle btn-sm bg-secondary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 "
+                                        viewBox="0 0 512 512">
+                                        <path
+                                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                                    </svg>
+                                </button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- news and article section ends -->
+
+        <!-- unique section starts -->
+        <section class="md:container md:mx-auto mx-4 mt-8 md:mt-16 lg:mt-24 flex flex-col gap-6 md:gap-10 lg:flex-row ">
+            <!-- FAQs section -->
+            <div class="flex-1 flex flex-col gap-3 justify-between">
+                <!-- texts -->
+                <div class="text-center space-y-2">
+                    <div class="flex justify-center">
+                        <a class="btn rounded-full bg-third font-bold ">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewBox="0 0 512 512">
+                                <path
+                                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                            </svg>
+                            FAQs
+                        </a>
+                    </div>
+                    <h2 class="font-bold text-2xl md:text-3xl">Frequently Asked Questions</h2>
+                    <p class="font-medium text-paragraph">We'd love to hear from you. Whether you have
+                        questions,projects details or else fill free to ask.</p>
+                </div>
+                <!-- FAQs -->
+                <div class="join join-vertical gap-4">
+                    <div class="collapse collapse-arrow bg-primary join-item border-base-300 border">
+                        <input type="radio" name="my-accordion-4" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">What is the first step in starting a house
+                            design project?</div>
+                        <div class="collapse-content">
+                            <p>The first step is to schedule an initial consultation with our team. During this meeting,
+                                we will discuss your ideas, needs, and budget. We’ll also review the site and any
+                                existing plans you may have.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-primary join-item border-base-300 border">
+                        <input type="radio" name="my-accordion-4" />
+                        <div class="collapse-title text-xl font-medium">How long does it take to complete a design
+                            project?</div>
+                        <div class="collapse-content">
+                            <p> The duration of a design project varies depending on the complexity and scope. Simple
+                                renovations may take a few weeks, while new constructions or major remodels can take
+                                several months.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-primary join-item border-base-300 border">
+                        <input type="radio" name="my-accordion-4" />
+                        <div class="collapse-title text-xl font-medium">What factors affect the cost of a house design
+                            project?</div>
+                        <div class="collapse-content">
+                            <p> Costs are influenced by factors such as the size of the project, the complexity of the
+                                design, materials used, and any special features or requirements. We offer a detailed
+                                estimate after discussing your project needs and preferences.</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow bg-primary join-item border-base-300 border">
+                        <input type="radio" name="my-accordion-4" />
+                        <div class="collapse-title text-xl font-medium">Do you offer design services for both new builds
+                            and renovations?</div>
+                        <div class="collapse-content">
+                            <p> Yes, we offer design services for both new construction projects and home renovations.
+                                Whether you’re building from scratch or updating an existing space, we can help you
+                                achieve your vision.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- contact us section -->
+            <div class="flex flex-col gap-4 justify-between flex-1">
+                <!-- texts -->
+                <div class="text-center space-y-2">
+                    <div class="flex justify-center">
+                        <a class="btn rounded-full bg-third font-bold ">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewBox="0 0 512 512">
+                                <path
+                                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                            </svg>
+                            Contact Us
+                        </a>
+                    </div>
+                    <h2 class="font-bold text-2xl md:text-3xl">Contact With Us</h2>
+                    <p class="font-medium text-paragraph">We'd love to hear from you. Whether you have questions or else
+                        please contact us.</p>
+                </div>
+                <!-- contacts -->
+                <div class="grid gap-5 md:grid-cols-2">
+                    <div class="border-2 bg-[#e0f7fa] p-5 rounded-xl text-center">
+                        <i class="fa-solid fa-location-dot text-lg text-paragraph"></i>
+                        <h2 class="font-bold text-2xl text-head">Address</h2>
+                        <p class="font-medium text-paragraph">College Road</p>
+                        <p class="font-medium text-paragraph">Mymensingh, Bangladesh</p>
+                    </div>
+                    <div class="border-2 bg-[#e0f7fa] p-5 rounded-xl text-center">
+                        <i class="fa-solid fa-phone text-lg text-paragraph"></i>
+                        <h2 class="font-bold text-2xl text-head">Call Us</h2>
+                        <p class="font-medium text-paragraph">+8801900000000</p>
+                        <p class="font-medium text-paragraph">+8801790000000</p>
+                    </div>
+                    <div class="border-2 bg-[#e0f7fa] p-5 rounded-xl text-center">
+                        <i class="fa-solid fa-envelope text-lg text-paragraph"></i>
+                        <h2 class="font-bold text-2xl text-head">Email Us</h2>
+                        <p class="font-medium text-paragraph">user@gmail.com</p>
+                        <p class="font-medium text-paragraph">user2@gmail.com</p>
+                    </div>
+                    <div class="border-2 bg-[#e0f7fa] p-5 rounded-xl text-center">
+                        <i class="fa-solid fa-clock text-lg text-paragraph"></i>
+                        <h2 class="font-bold text-2xl text-head">Working hours</h2>
+                        <p class="font-medium text-paragraph">Mon-Thus: 9AM to 5PM</p>
+                        <p class="font-medium text-paragraph">Sunday: 9AM to 3PM</p>
+                    </div>
+                </div>
+                <!-- button -->
+                <div class="flex justify-center">
+                    <button class="btn w-11/12 rounded-full bg-secondary font-bold text-2xl">
+                        Send Message
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 -rotate-45 bg-head rounded-full p-2"
+                            viewBox="0 0 512 512">
+                            <path fill="white"
+                                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <!-- unique section ends -->        
     </main>
     <!-- main section ends -->
     <footer></footer>
