added next-projects section

--- a/index.html
+++ b/index.html
@@ -707,7 +707,67 @@
                 </div>
             </div>
         </section>
-        <!-- unique section ends -->        
+        <!-- unique section ends -->
+         
+        <!-- next projects section starts -->
+        <section
+            class="border-2 md:border-4 border-primary py-8 md:py-16 lg:py-24 bg-form bg-no-repeat bg-cover bg-center mt-8 md:mt-16 lg:mt-24">
+            <!-- projects container -->
+            <div class="md:container md:mx-auto px-6 md:px-10 lg:px-20">
+                <div>
+                    <!-- button -->
+                    <div class="flex justify-center mb-4">
+                        <a class="btn rounded-full bg-third font-bold ">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewBox="0 0 512 512">
+                                <path
+                                    d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                            </svg>
+                            Let’s Connect
+                        </a>
+                    </div>
+                    <!-- texts -->
+                    <div class=" mb-8 space-y-6">
+                        <h3 class="font-bold text-2xl md:text-3xl lg:text-5xl text-center text-head">Let’s Discuss Next
+                            Project
+                        </h3>
+                        <p class="text-center font-medium text-paragraph">
+                            Let’s discuss your next project and turn your ideas into reality with our expertise,
+                            creativity, and personalized approach and make you smile.
+                        </p>
+                    </div>
+                    <!-- inputs -->
+                    <div class="grid gap-6 md:grid-cols-2">
+                        <div>
+                            <input type="text" placeholder="First Name*" class="input w-full rounded-full" />
+                        </div>
+                        <div>
+                            <input type="text" placeholder="Last Name*" class="input w-full rounded-full" />
+                        </div>
+                        <div>
+                            <input type="number" placeholder="Phone Number*" class="input w-full rounded-full" />
+                        </div>
+                        <div>
+                            <input type="email" placeholder="Email Number*" class="input w-full rounded-full" />
+                        </div>
+                        <div class="md:col-span-2">
+                            <textarea placeholder="Write your message here"
+                                class="input w-full h-60 py-4 rounded-3xl"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <!-- button -->
+                <a class="btn w-full mt-6 md:mt-8 flex rounded-full bg-secondary font-bold text-2xl">
+                    Send Mail
+                    <button class="btn btn-circle btn-sm bg-head">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 " viewBox="0 0 512 512">
+                            <path fill="white"
+                                d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                        </svg>
+                    </button>
+                </a>
+            </div>
+        </section>
+        <!-- next projects section ends -->        
     </main>
     <!-- main section ends -->
     <footer></footer>
