--- a/index.html
+++ b/index.html
@@ -770,7 +770,45 @@
         <!-- next projects section ends -->        
     </main>
     <!-- main section ends -->
-    <footer></footer>
+
+    <!-- footer starts -->
+    <footer class="footer footer-center bg-head text-base-content rounded px-7 md:px-0 py-16 lg:py-24 mt-1">
+        <!-- footer texts -->
+        <div class="w-full lg:w-3/6 md:w-4/5 space-y-4">
+            <div class="flex items-center gap-1">
+                <button class="btn btn-circle btn-sm bg-secondary">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 -rotate-45" viewBox="0 0 512 512">
+                        <path
+                            d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                    </svg>
+                </button>
+                <a class="font-bold text-3xl md:text-4xl text-primary">Rinterio</a>
+            </div>
+            <p class="text-[#737373] font-medium">
+                Rinterio offers bespoke interior design solutions, blending modern aesthetics with functional spaces to
+                create environments that inspire and delight
+            </p>
+        </div>
+        <!-- footer links -->
+        <nav class="grid md:grid-flow-col gap-8 md:gap-24 lg:gap-32 text-primary font-medium">
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">Services</a>
+            <a class="link link-hover">Portfolio</a>
+            <a class="link link-hover">Blogs</a>
+            <a class="link link-hover">Contucts Us</a>
+        </nav>
+        <!-- footer button -->
+        <a class="btn w-full md:w-auto flex rounded-full bg-secondary font-bold text-2xl">
+            Book Consult
+            <button class="btn btn-circle btn-sm bg-head">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 " viewBox="0 0 512 512">
+                    <path fill="white"
+                        d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
+                </svg>
+            </button>
+        </a>
+    </footer>
+    <!-- footer ends -->    
 </body>
 
 </html>
