--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         </p>
                         <div class="card-actions">
                             <a href="#" class=" font-bold text-lg bg-primary">
-                                Read More
+                                View Details
                                 <button class="btn btn-circle btn-sm bg-secondary">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 "
                                         viewBox="0 0 512 512">
@@ -427,7 +427,7 @@
                         </p>
                         <div class="card-actions">
                             <a href="#" class=" font-bold text-lg bg-primary">
-                                Read More
+                                View Details
                                 <button class="btn btn-circle btn-sm bg-secondary">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="w-4 -rotate-45 "
                                         viewBox="0 0 512 512">
@@ -459,7 +459,7 @@
         <section class="md:container md:mx-auto mx-4 mt-8 md:mt-16 lg:mt-24">
             <!-- button -->
             <div class="flex justify-center mb-4">
-                <a class="btn rounded-full bg-primary font-bold ">
+                <a class="btn rounded-full bg-third font-bold ">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-4" viewBox="0 0 512 512">
                         <path
                             d="M502.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-128-128c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l370.7 0-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l128-128z" />
